# arclap-station

./: .gitignore  CHANGELOG.md  Makefile  README.md  install.sh  pytest.ini
.github/workflows/: release.yml  test.yml
avahi/: arclap-station.service
backend/: README.md  pyproject.toml
backend/arclap_station/: __init__.py  audit.py  auth.py  backup.py  config.py  db.py  diag.py  main.py  metrics_prom.py  setup_wizard.py  station_config.py  watchdog_notify.py
backend/arclap_station/acceptance/: __init__.py  runner.py
backend/arclap_station/api/: __init__.py  acceptance.py  auth.py  camera.py  deps.py  destinations.py  diag.py  gallery.py  health_api.py  home.py  queue.py  router.py  schedule.py  settings.py  system.py  terminal.py
backend/arclap_station/camera/: __init__.py  adapter.py  health.py  mock.py  properties.py  stream.py
backend/arclap_station/cloud/: __init__.py  mqtt.py  pairing.py  wireguard.py
backend/arclap_station/hardware/: __init__.py  ups.py  usbhub.py
backend/arclap_station/health/: __init__.py  alerts.py  selftest.py
backend/arclap_station/photos/: __init__.py  dedup.py  exif.py  gallery.py  store.py  thumbnails.py  timelapse.py  watermark.py
backend/arclap_station/retention/: __init__.py  policy.py
backend/arclap_station/scheduler/: __init__.py  engine.py  rules.py
backend/arclap_station/telemetry/: __init__.py  logs.py  metrics.py
backend/arclap_station/terminal/: __init__.py  pty.py
backend/arclap_station/uploaders/: __init__.py  ftp.py  local.py  manager.py  mqtt.py  queue.py  s3.py  sftp.py  webhook.py
backend/arclap_station/watchdog/: __init__.py  camera.py
caddy/: Caddyfile.template
docs/: architecture.md  journalctl-cheatsheet.md  operator.md  phase4-fleet-spec.md  threat-model.md  troubleshooting.md  wizard-walkthrough.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.setup.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Button.tsx  Card.tsx  EmptyState.tsx  ErrorBoundary.tsx  FormField.tsx  HelpTooltip.tsx  OfflineBanner.tsx  Pill.tsx  Sidebar.tsx  ToastQueue.tsx  Toggle.tsx  Topbar.tsx  URLBar.tsx  icons.tsx  states.tsx
frontend/src/lib/: api.ts  hotkeys.ts  ws.ts
frontend/src/lib/bridge/: acceptance.ts  auth.ts  camera.ts  destinations.ts  gallery.ts  health.ts  home.ts  json.ts  schedule.ts  schemas.ts  settings.ts  setup.ts  terminal.ts
frontend/src/lib/i18n/: de.ts  en.ts  fr.ts  index.tsx
frontend/src/pages/: Gallery.tsx  Home.tsx  Login.tsx  Schedule.tsx  Terminal.tsx
frontend/src/pages/Camera/: Properties.tsx  Viewfinder.tsx  index.tsx
frontend/src/pages/Destinations/: index.tsx
frontend/src/pages/Destinations/forms/: FTPForm.tsx  LocalForm.tsx  MQTTForm.tsx  S3Form.tsx  SFTPForm.tsx  WebhookForm.tsx
frontend/src/pages/Settings/: index.tsx
frontend/src/pages/Settings/tabs/: Activity.tsx  Diagnostics.tsx  General.tsx  Health.tsx  Logs.tsx  Network.tsx  Security.tsx  Storage.tsx  System.tsx
frontend/src/pages/Setup/: index.tsx
frontend/src/pages/Setup/steps/: Camera.tsx  Check.tsx  Destination.tsx  Done.tsx  Network.tsx  PIN.tsx  Pair.tsx  Schedule.tsx  Station.tsx  Welcome.tsx
frontend/src/styles/: tokens.css
packaging/deb/: postinst  postrm  prerm
scripts/: reinstall_station.py
systemd/: NetworkManager-arclap.conf  arclap-backup.service  arclap-backup.timer  arclap-camera-watchdog.service  arclap-camera-watchdog.timer  arclap-integrity.service  arclap-integrity.timer  arclap-retention.service  arclap-retention.timer  arclap-station.service  arclap-station.socket  arclap-timelapse.service  arclap-timelapse.timer  arclap-uploader.service  arclap-usb3-disable.service  arclap-watchdog.service  arclap-watchdog.timer  journald-arclap.conf  resolved-arclap.conf  timesyncd-arclap.conf
tests/backend/: conftest.py  test_audit.py  test_auth.py  test_backup.py  test_camera_autoreconnect.py  test_camera_concurrency.py  test_camera_mock.py  test_camera_self_restart.py  test_camera_watchdog.py  test_capture_observability.py  test_gallery_bulk.py  test_gallery_download.py  test_health.py  test_logs.py  test_mqtt_connect_timeout.py  test_photo_store.py  test_queue.py  test_resilience.py  test_retention.py  test_scheduler.py  test_security.py  test_setup_wizard.py  test_system.py  test_upload_queue.py  test_uploader_paths.py
tests/backend/test_uploaders/: ftp_test.py  local_test.py  mqtt_test.py  s3_test.py  sftp_test.py  webhook_test.py
tests/frontend/: Camera.test.tsx  Destinations.test.tsx  Gallery.test.tsx  Home.test.tsx  Login.test.tsx  Schedule.test.tsx  SettingsGeneral.test.tsx  Setup.test.tsx  i18n.test.tsx  schemas.test.tsx  states.test.tsx  test-utils.tsx
udev/: 50-arclap-camera.rules
