[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "arclap-station"
version = "0.1.0"
description = "Arclap Station — on-device control plane for Raspberry Pi 5 tethered to a DSLR."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11,<3.14"
authors = [{ name = "Arclap AG", email = "engineering@arclap.ch" }]
keywords = ["arclap", "dslr", "raspberry-pi", "gphoto2", "timelapse"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
    "Framework :: FastAPI",
    "Topic :: Multimedia :: Graphics :: Capture",
]
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "websockets==13.1",
    "aiosqlite==0.20.0",
    "bcrypt==4.2.0",
    "itsdangerous==2.2.0",
    "python-multipart==0.0.12",
    "apscheduler==3.10.4",
    "sqlalchemy==2.0.35",
    "boto3==1.35.36",
    "paramiko==3.5.0",
    "httpx==0.27.2",
    "paho-mqtt==2.1.0",
    "psutil==6.0.0",
    "pillow==10.4.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "python-dateutil==2.9.0.post0",
    "keyring==25.4.1",
]

[project.optional-dependencies]
gphoto = ["gphoto2==2.5.1"]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "mypy==1.11.2",
    "ruff==0.6.9",
    "types-paramiko==3.5.0.20240928",
    "types-psutil==6.0.0.20240901",
    "types-python-dateutil==2.9.0.20241003",
    "boto3-stubs[s3]==1.35.36",
    "httpx==0.27.2",
]

[project.scripts]
arclap-station = "arclap_station.main:cli"

[project.urls]
Homepage = "https://arclap.ch"
Repository = "https://github.com/arclap-af/arclap-station"

[tool.hatch.build.targets.wheel]
packages = ["arclap_station"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "N", "UP"]
ignore = [
    "E501",  # line length handled by formatter
    "B008",  # FastAPI Depends() in defaults is idiomatic
    "B904",  # raise from in some HTTPException paths is noisy
    "N818",  # exception classes ending with Error
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011", "N802", "N806"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_unused_ignores = true
disallow_untyped_decorators = false  # FastAPI decorators
plugins = []
exclude = ["tests/", "build/"]

[[tool.mypy.overrides]]
module = [
    "gphoto2",
    "gphoto2.*",
    "apscheduler.*",
    "paho.*",
    "paho.mqtt.*",
    "keyring",
    "keyring.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["../tests/backend"]
addopts = "-ra -q --strict-markers"
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
