[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "arclap-station"
version = "0.9.2"
description = "Arclap Station — on-device control plane for Raspberry Pi 5 tethered to a DSLR."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "Arclap AG", email = "engineering@arclap.ch" }]
keywords = ["arclap", "dslr", "raspberry-pi", "gphoto2", "timelapse"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
    "Framework :: FastAPI",
    "Topic :: Multimedia :: Graphics :: Capture",
]
dependencies = [
    # Pinned to versions that ship cp311-cp314 wheels on PyPI. This is
    # critical: Ubuntu Resolute (26.04) ships Python 3.14 as the distro
    # default, and our older pinned versions had no cp314 wheels — pip
    # fell back to source compilation, which failed because PyO3 0.22
    # (used by older pydantic-core) hard-caps at 3.13. Lower bounds
    # below are the first releases that shipped cp314 wheels; upper
    # bounds keep us within a tested major. Patch upgrades flow in.
    "fastapi>=0.115,<0.117",
    "uvicorn[standard]>=0.32,<0.35",
    "websockets>=13.1,<14",
    "aiosqlite>=0.20,<0.22",
    "bcrypt>=4.3,<5",                 # 4.3+ adds cp314 wheels
    "itsdangerous>=2.2,<3",
    "python-multipart>=0.0.12,<0.1",
    "apscheduler>=3.10,<4",
    "sqlalchemy>=2.0.35,<2.1",
    "boto3>=1.35,<2",
    "paramiko>=3.5.1,<4",             # pulls cryptography ≥44 (cp314)
    "httpx>=0.27,<0.29",
    "paho-mqtt>=2.1,<3",
    "psutil>=6.1,<7",                 # 6.1 ships cp314 wheels
    "pillow>=11.1,<12",               # 11.1 ships cp314 wheels
    "pydantic>=2.11,<3",              # 2.11 uses pydantic-core 2.30+ (PyO3 0.23, supports 3.14)
    "pydantic-settings>=2.7,<3",
    "python-dateutil>=2.9,<3",
    "keyring>=25.4,<26",
]

[project.optional-dependencies]
gphoto = ["gphoto2==2.5.1"]
sentry = ["sentry-sdk[fastapi]>=2.14,<3"]
mqtt = ["paho-mqtt>=2.1,<3"]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "mypy==1.11.2",
    "ruff==0.6.9",
    "types-paramiko==3.5.0.20240928",
    "types-psutil==6.0.0.20240901",
    "types-python-dateutil==2.9.0.20241003",
    "boto3-stubs[s3]==1.35.36",
    "httpx==0.27.2",
]

[project.scripts]
arclap-station = "arclap_station.main:cli"

[project.urls]
Homepage = "https://arclap.ch"
Repository = "https://github.com/arclap-af/arclap-station"

[tool.hatch.build.targets.wheel]
packages = ["arclap_station"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "N", "UP"]
ignore = [
    "E501",  # line length handled by formatter
    "B008",  # FastAPI Depends() in defaults is idiomatic
    "B904",  # raise from in some HTTPException paths is noisy
    "N818",  # exception classes ending with Error
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011", "N802", "N806"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_unused_ignores = true
disallow_untyped_decorators = false  # FastAPI decorators
plugins = []
exclude = ["tests/", "build/"]

[[tool.mypy.overrides]]
module = [
    "gphoto2",
    "gphoto2.*",
    "apscheduler.*",
    "paho.*",
    "paho.mqtt.*",
    "keyring",
    "keyring.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["../tests/backend"]
addopts = "-ra -q --strict-markers"
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
